# cookiecutter-python-ds

./: .gitignore  .pre-commit-config.yaml  LICENSE  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Makefile  README.md  gitignore  pyproject.toml  pyproject_complement.toml
{{cookiecutter.project_slug}}/src/: run.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  config.py  main.py
