[tool.poetry]
name = "cookiecutter-python-ds"
version = "0.1.0"
description = ""
authors = ["Bruno Amaral <amaralbf@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "20.8b1"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
skip-string-normalization = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
