[tool.poetry]
name = "cookiecutter-python-ds"
version = "0.1.0"
description = ""
authors = ["Bruno Amaral <amaralbf@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.8.3"
isort = "^5.5.3"

[tool.poetry.dev-dependencies]
black = "20.8b1"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
