[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = ["Bruno Amaral <amaralbf@gmail.com>"]

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.package_name }}.main:run"

[tool.poetry.dependencies]
python = "^3.6.1"
click = ">=7.1.2"
loguru = ">=0.5.3"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = ">=3.8.3"
isort = ">=5.5.3"
pre-commit = ">=2.7.1"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
